--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -8,7 +8,9 @@ jobs:
     runs-on: macos-14
     
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v3
+      with:
+      submodules: recursive
     - name: make
       working-directory: ./
       run: mkdir build && cd  build && cmake .. && cmake . --build Alpha101 -j
