--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -27,7 +27,7 @@ jobs:
       with:
         python-version: '3.9'
         cache: 'pip' # caching pip dependencies
-    - run: pip install -r .github/requirements.txt
+    - run: pip install -r requirements.txt
     - name: make
       working-directory: ./
       run: mkdir build && cd build && cmake .. && cmake --build . --target TestingTargets --config Release -- -j
@@ -47,7 +47,7 @@ jobs:
       with:
         python-version: '3.9'
         cache: 'pip' # caching pip dependencies
-    - run: pip install -r .github/requirements.txt
+    - run: pip install -r requirements.txt
     - name: make
       working-directory: ./
       run: mkdir build && cd build && cmake .. -DKUN_AVX512=ON -DKUN_AVX512VL=ON -DKUN_AVX512DQ=ON && cmake --build . --target TestingTargets --config Release -- -j
