--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -27,13 +27,44 @@ jobs:
       with:
         python-version: '3.9'
         cache: 'pip' # caching pip dependencies
-    - run: pip install pandas==2.2.2 numpy==1.26.4
+    - run: pip install -r .github/workflows/requirements.txt
     - name: make
       working-directory: ./
       run: mkdir build && cd build && cmake .. && cmake --build . --target TestingTargets --config Release -- -j
     - name: download data
       working-directory: ./
-      run: wget -P /tmp https://github.com/Menooker/KunQuant/releases/download/alpha158/alpha158.npz && wget -P /tmp https://github.com/Menooker/KunQuant/releases/download/alpha158/input.npz
+      run: wget -nv -P /tmp https://github.com/Menooker/KunQuant/releases/download/alpha158/alpha158.npz && wget -P /tmp https://github.com/Menooker/KunQuant/releases/download/alpha158/input.npz
     - name: test
       working-directory: ./
       run: PYTHONPATH="./build:." bash ./tests/tests.sh
+  test-linux-avx512:
+    runs-on: ubuntu-20.04
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        submodules: recursive
+    - uses: actions/setup-python@v5
+      with:
+        python-version: '3.9'
+        cache: 'pip' # caching pip dependencies
+    - run: pip install -r .github/workflows/requirements.txt
+    - name: Cache SDE
+      id: cache-intel-sde
+      uses: actions/cache@v4
+      with:
+        path: sde-external-9.38.0-2024-04-18-lin.tar.xz
+        key: ${{ runner.os }}-intel-sde
+    - name: Download SDE
+      if: steps.cache-intel-sde.outputs.cache-hit != 'true'
+      run: wget -nv https://downloadmirror.intel.com/823664/sde-external-9.38.0-2024-04-18-lin.tar.xz
+    - name: Extract SDE
+      run: tar -xf sde-external-9.38.0-2024-04-18-lin.tar.xz
+    - name: make
+      working-directory: ./
+      run: mkdir build && cd build && cmake .. -DKUN_AVX512=ON -DKUN_AVX512VL=ON -DKUN_AVX512DQ=ON && cmake --build . --target TestingTargets --config Release -- -j
+    - name: download data
+      working-directory: ./
+      run: wget -nv -P /tmp https://github.com/Menooker/KunQuant/releases/download/alpha158/alpha158.npz && wget -P /tmp https://github.com/Menooker/KunQuant/releases/download/alpha158/input.npz
+    - name: test
+      working-directory: ./
+      run: PATH="$PATH:./sde-external-9.38.0-2024-04-18-lin/" PYTHONPATH="./build:." bash ./tests/tests_avx512.sh
