--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,28 @@ project(KunRunner VERSION 0.0.1)
 cmake_minimum_required(VERSION 3.5)
 add_subdirectory(3rdparty/pybind11)
 include_directories(${pybind11_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/cpp)
-message(STATUS ${pybind11_INCLUDE_DIRS})
+
+option(KUN_AVX512 "Enable AVX512 instruction set" OFF)
+option(KUN_AVX512DQ "Enable AVX512DQ instruction set" OFF)
+option(KUN_AVX512VL "Enable AVX512VL instruction set" OFF)
+
 if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" OR CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fvisibility=hidden -fvisibility-inlines-hidden -mavx2 -mfma -pthread")
+    if(KUN_AVX512)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx512f")
+    endif()
+    if(KUN_AVX512DQ)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx512dq")
+    endif()
+    if(KUN_AVX512VL)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx512vl")
+    endif()
 else()
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4251 /wd4200 /wd4305")
+    if(KUN_AVX512 OR KUN_AVX512DQ OR KUN_AVX512VL)
+        # MSVC has only one flag for AVX512
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /arch:AVX512")
+    endif()
 endif()
 
 
