--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -14,9 +14,12 @@ jobs:
     - uses: actions/checkout@v3
       with:
         submodules: recursive
+    - uses: actions/setup-python@v5
+      with:
+        python-version: '3.9'
     - name: make
       working-directory: ./
-      run: mkdir build && cd  build && cmake .. && cmake --build . --target Alpha101 --config Release -j
+      run: KUN_BUILD_TESTS=1 pip install . -v
   test-linux:
     runs-on: ubuntu-20.04
     steps:
@@ -30,13 +33,13 @@ jobs:
     - run: pip install -r .github/workflows/requirements.txt
     - name: make
       working-directory: ./
-      run: mkdir build && cd build && cmake .. && cmake --build . --target TestingTargets --config Release -- -j
+      run: KUN_BUILD_TESTS=1 pip install . -v
     - name: download data
       working-directory: ./
       run: wget -nv -P /tmp https://github.com/Menooker/KunQuant/releases/download/alpha158/alpha158.npz && wget -P /tmp https://github.com/Menooker/KunQuant/releases/download/alpha158/input.npz
     - name: test
       working-directory: ./
-      run: PYTHONPATH="./build:." bash ./tests/tests.sh
+      run: bash ./tests/tests.sh
   test-linux-avx512:
     runs-on: ubuntu-20.04
     steps:
@@ -61,10 +64,10 @@ jobs:
       run: tar -xf sde-external-9.38.0-2024-04-18-lin.tar.xz
     - name: make
       working-directory: ./
-      run: mkdir build && cd build && cmake .. -DKUN_AVX512=ON -DKUN_AVX512VL=ON -DKUN_AVX512DQ=ON && cmake --build . --target TestingTargets --config Release -- -j
+      run: KUN_BUILD_TESTS=1 pip install . -v
     - name: download data
       working-directory: ./
       run: wget -nv -P /tmp https://github.com/Menooker/KunQuant/releases/download/alpha158/alpha158.npz && wget -P /tmp https://github.com/Menooker/KunQuant/releases/download/alpha158/input.npz
     - name: test
       working-directory: ./
-      run: PATH="$PATH:./sde-external-9.38.0-2024-04-18-lin/" PYTHONPATH="./build:." bash ./tests/tests_avx512.sh
+      run: PATH="$PATH:./sde-external-9.38.0-2024-04-18-lin/" bash ./tests/tests_avx512.sh
