--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -23,7 +23,7 @@ jobs:
         build
         --user
     - name: Build a binary wheel and a source tarball
-      run: python3 -m build
+      run: python3 -m build --wheel
     - name: Store the distribution packages
       uses: actions/upload-artifact@v4
       with:
