--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -26,6 +26,11 @@ jobs:
         --user
     - name: Build a binary wheel and a source tarball
       run: python3 -m build --wheel
+    - name: Repair wheel for manylinux (Linux only)
+      if: runner.os == 'Linux'
+      run: |
+        python -m pip install auditwheel
+        auditwheel repair dist/*.whl -w dist/
     - name: Store the distribution packages
       uses: actions/upload-artifact@v4
       with:
