--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -2,8 +2,9 @@ name: Publish Python 🐍 distribution 📦 to PyPI and TestPyPI
 on:
   push:
     branches:
-    - main
-  pull_request:
+      - main
+    tags:
+      - *
   workflow_dispatch:
 jobs:
   build:
