--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -64,7 +64,9 @@ jobs:
     - run: pip install -r .github/workflows/requirements.txt
     - name: make
       working-directory: ./
-      run: KUN_BUILD_TESTS=1 pip install . -v
+      run: |
+        $env:KUN_BUILD_TESTS=1
+        pip install . -v
     - name: download data
       working-directory: ./
       run: |
