--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -74,6 +74,8 @@ jobs:
         Invoke-WebRequest https://github.com/Menooker/KunQuant/releases/download/alpha158/input.npz -OutFile input.npz
     - name: Add msbuild to PATH
       uses: ilammy/msvc-dev-cmd@v1
+      with:
+        arch: amd64
     - name: Basic test
       working-directory: ./
       run: |
