--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -9,10 +9,11 @@ on:
 jobs:
   build:
     name: Build distribution 📦
-    runs-on: ubuntu-22.04
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        os: [ubuntu-20.04, windows-2022]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
 
     steps:
     - uses: actions/checkout@v4
@@ -28,19 +29,18 @@ jobs:
         pip install
         build
         --user
-    - name: Build a binary wheel and a source tarball
-      run: KUN_USE_GIT_VERSION=${{ startsWith(github.ref, 'refs/tags/') && '0' || '1' }} python3 -m build --wheel
-    - name: Repair wheel for manylinux (Linux only)
+    - name: Build a binary wheel and a source tarball (linux)
       if: runner.os == 'Linux'
+      run: KUN_USE_GIT_VERSION=${{ startsWith(github.ref, 'refs/tags/') && '0' || '1' }} python3 -m build --wheel
+    - name: Build a binary wheel and a source tarball (windows)
+      if: runner.os == 'Windows'
       run: |
-        sudo apt install --upgrade patchelf
-        python -m pip install auditwheel
-        auditwheel repair dist/*.whl -w dist/ --plat manylinux_2_38_x86_64
-        rm dist/*linux_x86_64.whl
+        $env:KUN_USE_GIT_VERSION=${{ startsWith(github.ref, 'refs/tags/') && '0' || '1' }}
+        python3 -m build --wheel
     - name: Store the distribution packages
       uses: actions/upload-artifact@v4
       with:
-        name: python-package-distributions${{ matrix.python-version }}
+        name: python-package-distributions-${{ matrix.os }}${{ matrix.python-version }}
         path: dist/
   publish-to-pypi:
     name: >-
@@ -51,7 +51,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
     environment:
       name: pypi
       url: https://pypi.org/p/KunQuant  # Replace <package-name> with your PyPI project name
@@ -61,8 +61,15 @@ jobs:
     - name: Download all the dists
       uses: actions/download-artifact@v4
       with:
-        name: python-package-distributions${{ matrix.python-version }}
+        name: python-package-distributions-ubuntu-20.04${{ matrix.python-version }}
         path: dist/
+    - name: Repair wheel for manylinux (Linux only)
+      if: runner.os == 'Linux'
+      run: |
+        sudo apt install --upgrade patchelf
+        python -m pip install auditwheel
+        auditwheel repair dist/*.whl -w dist/ --plat manylinux_2_31_x86_64
+        rm dist/*linux_x86_64.whl
     - name: Publish distribution 📦 to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
   publish-to-testpypi:
@@ -72,7 +79,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
     environment:
       name: testpypi
       url: https://test.pypi.org/p/KunQuant
@@ -82,7 +89,19 @@ jobs:
     - name: Download all the dists
       uses: actions/download-artifact@v4
       with:
-        name: python-package-distributions${{ matrix.python-version }}
+        name: python-package-distributions-ubuntu-20.04${{ matrix.python-version }}
+        path: dist/
+    - name: Repair wheel for manylinux (Linux only)
+      if: runner.os == 'Linux'
+      run: |
+        sudo apt install --upgrade patchelf
+        python -m pip install auditwheel
+        auditwheel repair dist/*.whl -w dist/ --plat manylinux_2_31_x86_64
+        rm dist/*linux_x86_64.whl
+    - name: Download all windows the dists
+      uses: actions/download-artifact@v4
+      with:
+        name: python-package-distributions-windows-2022${{ matrix.python-version }}
         path: dist/
     - name: Publish distribution 📦 to TestPyPI
       uses: pypa/gh-action-pypi-publish@release/v1
