--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         os: [ubuntu-22.04, windows-2022]
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
-    if: runner.os == 'Linux'
+    if: ${{ matrix.os }} == 'Linux'
     container:
       image: "ubuntu:22.04"
     steps:
