--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -12,9 +12,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-22.04, windows-2022]
+        os: [ubuntu-22.04]
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
-    if: ${{ matrix.os }} == 'Linux'
     container:
       image: "ubuntu:22.04"
     steps:
