--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -15,7 +15,7 @@ jobs:
         os: [ubuntu-22.04]
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
     container:
-      image: "ubuntu:22.04"
+      image: ghcr.io/menooker/kunquant
     steps:
     - uses: actions/checkout@v4
       with:
