--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -12,10 +12,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-22.04]
+        os: [ubuntu-22.04, windows-2022]
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
-    container:
-      image: ghcr.io/menooker/kunquant:pr-39
+
     steps:
     - uses: actions/checkout@v4
       with:
