--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -40,11 +40,10 @@ jobs:
         name: python-package-distributions-${{ matrix.os }}${{ matrix.python-version }}
         path: dist/
   build-linux:
-    name: Build distribution Windows 📦
-    runs-on: ${{ matrix.os }}
+    name: Build distribution Linux 📦
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
-        os: [ubuntu-22.04]
         include:
           - python-version: "3.8"
             cp-tag: "cp38"
@@ -77,10 +76,11 @@ jobs:
           CIBW_BUILD: "${{ matrix.cp-tag }}-manylinux_x86_64"
           CIBW_BUILD_FRONTEND: "build"
           CIBW_MANYLINUX_X86_64_IMAGE: "ghcr.io/menooker/kunquant:main"
+          CIBW_ENVIRONMENT: "KUN_USE_GIT_VERSION=${{ startsWith(github.ref, 'refs/tags/') && '0' || '1' }}"
     - name: Store the distribution packages
       uses: actions/upload-artifact@v4
       with:
-        name: python-package-distributions-${{ matrix.os }}${{ matrix.python-version }}
+        name: python-package-distributions-${{ runner.os }}${{ matrix.python-version }}
         path: wheelhouse/*.whl
   publish-to-pypi:
     name: >-
