--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -80,7 +80,7 @@ jobs:
     - name: Store the distribution packages
       uses: actions/upload-artifact@v4
       with:
-        name: python-package-distributions-${{ runner.os }}${{ matrix.python-version }}
+        name: python-package-distributions-ubuntu-22.04${{ matrix.python-version }}
         path: wheelhouse/*.whl
   publish-to-pypi:
     name: >-
