--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -21,7 +21,11 @@ jobs:
       working-directory: ./
       run: KUN_BUILD_TESTS=1 pip install . -v
   test-linux:
-    runs-on: ubuntu-22.04
+    # run this job on both amd64 and arm64 ubuntu runners
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-22.04, ubuntu-22.04-arm]
     steps:
     - uses: actions/checkout@v3
       with:
@@ -32,15 +36,17 @@ jobs:
         cache: 'pip' # caching pip dependencies
     - run: pip install -r .github/workflows/requirements.txt
     - name: Cache SDE
+      if: ${{ matrix.os != 'ubuntu-22.04-arm' }}
       id: cache-intel-sde
       uses: actions/cache@v4
       with:
         path: sde-external-9.38.0-2024-04-18-lin.tar.xz
         key: ${{ runner.os }}-intel-sde
     - name: Download SDE
-      if: steps.cache-intel-sde.outputs.cache-hit != 'true'
+      if: ${{ matrix.os != 'ubuntu-22.04-arm' && steps.cache-intel-sde.outputs.cache-hit != 'true' }}
       run: wget -nv https://downloadmirror.intel.com/823664/sde-external-9.38.0-2024-04-18-lin.tar.xz
     - name: Extract SDE
+      if: ${{ matrix.os != 'ubuntu-22.04-arm' }}
       run: tar -xf sde-external-9.38.0-2024-04-18-lin.tar.xz
     - name: make
       working-directory: ./
@@ -49,8 +55,13 @@ jobs:
       working-directory: ./
       run: wget -nv -P /tmp https://github.com/Menooker/KunQuant/releases/download/alpha158/alpha158.npz && wget -P /tmp https://github.com/Menooker/KunQuant/releases/download/alpha158/input.npz
     - name: test
+      if: ${{ matrix.os != 'ubuntu-22.04-arm' }}
       working-directory: ./
       run: PATH="$PATH:./sde-external-9.38.0-2024-04-18-lin/" bash ./tests/tests.sh
+    - name: test arm
+      if: ${{ matrix.os == 'ubuntu-22.04-arm' }}
+      working-directory: ./
+      run: bash ./tests/tests)arm.sh
   test-windows:
     runs-on: windows-2022
     steps:
