--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,11 @@ cmake_minimum_required(VERSION 3.5)
 add_subdirectory(3rdparty/pybind11)
 include_directories(${pybind11_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/cpp)
 
-set(CMAKE_INSTALL_RPATH "\$ORIGIN")
+if(APPLE)
+    set(CMAKE_INSTALL_RPATH "@loader_path")
+else()
+    set(CMAKE_INSTALL_RPATH "\$ORIGIN")
+endif()
 set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
 
 option(KUN_AVX512 "Enable AVX512 instruction set" OFF)
